--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "tz-lookup": "^6.1.25"
   },
   "devDependencies": {
+    "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/tz-lookup": "^6.1.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "latest",
     "postcss": "^8.3.6",
     "typescript": "^4.4.4"
