--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
+    "bottleneck": "^2.19.5",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "moment-timezone": "^0.5.48",
